--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.3.3",
   "private": true,
   "dependencies": {
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "typewriter-effect": "^2.19.0",
+    "typewriterjs": "^1.0.0"
   },
   "engines": {
     "node": "16.15.1",
